fix overlap center card image spacing

--- a/frontend/styles/cms_utils.scss
+++ b/frontend/styles/cms_utils.scss
@@ -189,6 +189,13 @@
     }
   }
 
+  &.overlap-center {
+    img {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
   @include media-breakpoint-up(md) {
     &.overlap-right {
       margin-right: 3rem;
